# adaptive-gyro-filtering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: adaptnotch-config.cmake.in  plot.cmake.in
data/: rawimu-hover.txt  rawimu-motion.txt
include/adaptnotch/: adaptnotch.h
matlab/: dynnotch.m
src/: adaptnotch.cpp  csv.h  main.cpp  test.cpp
